--- a/NBA.DataCreator.Test/NBA.DataCreator.Test.csproj
+++ b/NBA.DataCreator.Test/NBA.DataCreator.Test.csproj
@@ -5,11 +5,16 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>7.3</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.12" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NBA.Client.Test\NBA.Client.Test.csproj" />
     <ProjectReference Include="..\NBA.DataCreator\NBA.DataCreator.csproj" />
   </ItemGroup>
 
