--- a/NBA.EFCore/NBA.EFCore.csproj
+++ b/NBA.EFCore/NBA.EFCore.csproj
@@ -10,12 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.12" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\NBA.Client.Test\NBA.Client.Test.csproj" />
-    <ProjectReference Include="..\NBA.DataCreator\NBA.DataCreator.csproj" />
+    <PackageReference Include="MySql.Data.EntityFrameworkCore.Design" Version="8.0.12" />
   </ItemGroup>
 
 </Project>
